Atualizar o aistudio.html

--- a/aistudio.html
+++ b/aistudio.html
@@ -364,7 +364,7 @@
               href="https://wa.me/5511959029428?text=Quero%20testar%20gratuitamente%20o%20CRM%20de%20Atendimento%20com%20IA%20da%20Tullu%20no%20WhatsApp.%20Quero%20ver%20um%20exemplo%20do%20meu%20neg%C3%B3cio."
               class="btn btn--primary btn--large"
               target="_blank"
-            >Quero testar no meu negócio</a><br>
+            >Quero testar no meu negócio</a>
           
           </div>
         </div>
