--- a/aistudio.html
+++ b/aistudio.html
@@ -73,7 +73,7 @@
 
       <img src="assets/img/aistudio.png.png" alt="AI Studio" class="hero__logo">
 
-      <h1 class="hero__title">
+      <h1 class="hero__title" style="  line-height: 1.15;">
         Atenda clientes no <span class="gradient-text">WhatsApp com IA 24/7</span>
       </h1>
 
@@ -586,26 +586,103 @@
 
 </main>
 
-<footer class="footer">
-  <div class="container">
-    <div class="footer__content">
-      <div class="footer__brand">
-        <div class="footer__logo">
-          <img src="assets/img/tullu.png" class="footer__logo-img" alt="Tullu Motion">
+ <!-- Footer -->
+
+  <footer class="footer">
+
+    <div class="container">
+
+      <div class="footer__content">
+
+        <div class="footer__brand">
+
+          <div class="footer__logo">
+
+            <img src="assets/img/tullu.png" alt="Tullu Motion" class="footer__logo-img">
+
+            <span class="footer__logo-text"></span>
+
+          </div>
+
+          <p class="footer__description">
+
+            O motor digital que combina automação, IA e estratégia para acelerar marcas.
+
+          </p>
+
         </div>
-        <p class="footer__description">
-          O motor digital que combina automação, IA e estratégia para acelerar marcas.
-        </p>
+
+
+
+        <div class="footer__links">
+
+          <div class="footer__section">
+
+            <h4 class="footer__section-title">Navegação</h4>
+
+            <ul class="footer__list">
+
+              <li><a href="index.html#servicos" class="footer__link">Recursos</a></li>
+
+              <li><a href="index.html#como-funciona" class="footer__link">Como funciona</a></li>
+
+              <li><a href="index.html#cases" class="footer__link">Cases</a></li>
+
+            </ul>
+
+          </div>
+
+
+
+          <div class="footer__section">
+
+            <h4 class="footer__section-title">Contato</h4>
+
+            <ul class="footer__list">
+
+              <li><a href="https://wa.me/5511959029428?text=Quero%20testar%20gratuitamente%20o%20CRM%20de%20Atendimento%20com%20IA%20da%20Tullu%20no%20WhatsApp.%20Quero%20ver%20um%20exemplo%20do%20meu%20neg%C3%B3cio." class="footer__link" target="_blank">WhatsApp</a></li>
+
+              <li><a href="mailto:comercial@tullumotion.com" class="footer__link">E-mail</a></li>
+
+            </ul>
+
+          </div>
+
+
+
+          <div class="footer__section">
+
+            <h4 class="footer__section-title">Legal</h4>
+
+            <ul class="footer__list">
+
+              <li><a href="#" class="footer__link">Política de Privacidade</a></li>
+
+              <li><a href="#" class="footer__link">Termos de Uso</a></li>
+
+            </ul>
+
+          </div>
+
+        </div>
+
       </div>
+
+
+
+      <div class="footer__bottom">
+
+        <p class="footer__copyright">
+
+          © 2026 Tullu Motion. Todos os direitos reservados.
+
+        </p>
+
+      </div>
+
     </div>
 
-    <div class="footer__bottom">
-      <p class="footer__copyright">
-        © 2025 Tullu Motion. Todos os direitos reservados.
-      </p>
-    </div>
-  </div>
-</footer>
+  </footer>
 
 <script src="assets/js/main.js"></script>
 <script src="assets/js/branch-animations.js"></script>
