--- a/aistudio.html
+++ b/aistudio.html
@@ -73,7 +73,7 @@
 
       <img src="assets/img/aistudio.png.png" alt="AI Studio" class="hero__logo">
 
-      <h1 class="hero__title" style="  line-height: 1.15;">
+      <h1 class="hero__title" style="  line-height: 2;">
         Atenda clientes no <span class="gradient-text">WhatsApp com IA 24/7</span>
       </h1>
 
@@ -622,11 +622,11 @@
 
             <ul class="footer__list">
 
-              <li><a href="index.html#servicos" class="footer__link">Recursos</a></li>
+              <li><a href="aistudio.html#comparativo" class="footer__link">Recursos</a></li>
 
-              <li><a href="index.html#como-funciona" class="footer__link">Como funciona</a></li>
+              <li><a href="aistudio.html#faq" class="footer__link">Dúvidas frequentes</a></li>
 
-              <li><a href="index.html#cases" class="footer__link">Cases</a></li>
+            
 
             </ul>
 
