--- a/aistudio.html
+++ b/aistudio.html
@@ -131,6 +131,150 @@
   </div>
 </section>
 
+<!-- COMO FUNCIONA O TESTE GRATUITO (nova seção) -->
+<section class="cta-section" id="teste-gratis">
+  <div class="container">
+    <div class="cta-section__card">
+
+      <h1 class="hero__title" style="text-align:center;">
+        Como funciona o <span class="gradient-text">teste gratuito</span>
+      </h1>
+
+      <p class="cta-section__subtitle" style="max-width: 860px; margin-left:auto; margin-right:auto;">
+        Você vê a IA atendendo no WhatsApp de verdade e tudo sendo organizado no CRM, com um processo simples, transparente e controlado por você.
+      </p>
+
+      <div style="display:flex; gap: .75rem; flex-wrap: wrap; justify-content:center; margin-top: 1rem;">
+        <span class="tag tag--ai">Sem cobrança automática</span>
+        <span class="tag tag--ai">Ativação com autorização</span>
+        <span class="tag tag--ai">Você controla o acesso</span>
+      </div>
+
+      <br>
+
+      <!-- passos (cards) -->
+      <div class="cards-grid" style="
+        max-width: 980px;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 14px;
+      ">
+        <div class="card-base" style="
+          align-items:flex-start;
+          background: rgba(255,255,255,0.03);
+          border: 1px solid rgba(255,255,255,0.08);
+          box-shadow: 0 10px 30px rgba(0,0,0,0.30);
+        ">
+          <div style="
+            width: 38px; height: 38px; border-radius: 12px;
+            display:flex; align-items:center; justify-content:center;
+            background: rgba(0, 200, 255, 0.14);
+            border: 1px solid rgba(0, 200, 255, 0.26);
+            flex: 0 0 auto;
+            margin-top: 2px;
+          ">
+            <span style="
+              width: 10px; height: 10px; border-radius: 999px;
+              background: rgba(120, 255, 220, 0.92);
+              box-shadow: 0 0 16px rgba(120, 255, 220, 0.55);
+              display:block;
+            "></span>
+          </div>
+          <div>
+            <strong>Você inicia pelo WhatsApp</strong>
+            <div style="margin-top:.35rem; color: var(--muted);">
+              Você diz seu tipo de negócio e o objetivo do atendimento (orçamento, agendamento, suporte).
+            </div>
+          </div>
+        </div>
+
+        <div class="card-base" style="
+          align-items:flex-start;
+          background: rgba(255,255,255,0.03);
+          border: 1px solid rgba(255,255,255,0.08);
+          box-shadow: 0 10px 30px rgba(0,0,0,0.30);
+        ">
+          <div style="
+            width: 38px; height: 38px; border-radius: 12px;
+            display:flex; align-items:center; justify-content:center;
+            background: rgba(0, 200, 255, 0.14);
+            border: 1px solid rgba(0, 200, 255, 0.26);
+            flex: 0 0 auto;
+            margin-top: 2px;
+          ">
+            <span style="
+              width: 10px; height: 10px; border-radius: 999px;
+              background: rgba(120, 255, 220, 0.92);
+              box-shadow: 0 0 16px rgba(120, 255, 220, 0.55);
+              display:block;
+            "></span>
+          </div>
+          <div>
+            <strong>Você preenche um formulário curto</strong>
+            <div style="margin-top:.35rem; color: var(--muted);">
+              Você envia os dados essenciais e autoriza a ativação do teste. Sem letras miúdas.
+            </div>
+          </div>
+        </div>
+
+        <div class="card-base" style="
+          align-items:flex-start;
+          background: rgba(255,255,255,0.03);
+          border: 1px solid rgba(255,255,255,0.08);
+          box-shadow: 0 10px 30px rgba(0,0,0,0.30);
+        ">
+          <div style="
+            width: 38px; height: 38px; border-radius: 12px;
+            display:flex; align-items:center; justify-content:center;
+            background: rgba(0, 200, 255, 0.14);
+            border: 1px solid rgba(0, 200, 255, 0.26);
+            flex: 0 0 auto;
+            margin-top: 2px;
+          ">
+            <span style="
+              width: 10px; height: 10px; border-radius: 999px;
+              background: rgba(120, 255, 220, 0.92);
+              box-shadow: 0 0 16px rgba(120, 255, 220, 0.55);
+              display:block;
+            "></span>
+          </div>
+          <div>
+            <strong>A gente ativa e você testa na vida real</strong>
+            <div style="margin-top:.35rem; color: var(--muted);">
+              Você vê atendimento no WhatsApp + tudo registrado no CRM. Você entra só quando o lead estiver pronto.
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <br>
+
+      <!-- link com brilho (não botão) -->
+      <div style="text-align:center; margin-top: .75rem;">
+        <a href="teste-gratuito.html" style="
+          display:inline-block;
+          font-weight: 800;
+          text-decoration:none;
+          letter-spacing: -0.01em;
+          color: rgba(255,255,255,0.95);
+          padding: 12px 16px;
+          border-radius: 999px;
+          border: 1px solid rgba(120,255,220,0.20);
+          background: rgba(0, 200, 255, 0.10);
+          box-shadow:
+            0 0 0 1px rgba(120,255,220,0.08) inset,
+            0 12px 30px rgba(0,145,255,0.14),
+            0 0 26px rgba(120,255,220,0.20);
+        ">
+          Ver a explicação completa do teste gratuito
+        </a>
+      </div>
+
+    </div>
+  </div>
+</section><br>
+
 <!-- FEATURES (Por que a Tullu) -->
 <section class="features" id="features">
   <div class="container">
