Add line break before closing div tag

--- a/teste-gratuito.html
+++ b/teste-gratuito.html
@@ -228,7 +228,7 @@
         <a href="#como-funciona" class="btn btn--outline btn--large">Entender como funciona</a>
       </div>
 
-    </div>
+    </div><br>
   </div>
 </section>
 
