Atualizar o formulario-teste.html

--- a/formulario-teste.html
+++ b/formulario-teste.html
@@ -346,26 +346,27 @@
                   <button type="submit" class="btn btn--primary btn--large" id="submitBtn">Enviar</button>
                 </div>
               </section>
+<section class="form-step" id="successStep" data-step="success" hidden>
+  <h1 class="form-title" style="margin:0 0 8px;">Pronto, recebemos seus dados</h1>
 
-              <section class="form-step" id="successStep" data-step="success" hidden>
-                <h2 class="hero3_title" style="margin:0 0 8px;">Pronto, recebemos seus dados</h2>
-                <p class="help" style="margin-top:0;">
-                  Em até 24h úteis você recebe QR Code, termo de autorização e login do painel.
-                </p>
+  <p class="form-subtitle" style="margin-top:0;">
+    Em até 24h úteis você recebe QR Code, termo de autorização e login do painel.
+  </p>
 
-                <div class="showcase__cta" style="margin-top: 12px;">
-                  <a
-                    href="https://wa.me/5511978217095?text=J%C3%A1%20preenchi%20o%20formul%C3%A1rio%2C%20podemos%20dar%20continuidade."
-                    class="btn btn--primary btn--large"
-                    target="_blank"
-                    rel="noopener"
-                  >Voltar para o WhatsApp e confirmar envio</a>
+  <div class="showcase__cta" style="margin-top: 12px;">
+    <a
+      href="https://wa.me/5511978217095?text=J%C3%A1%20preenchi%20o%20formul%C3%A1rio%2C%20podemos%20dar%20continuidade."
+      class="btn btn--primary btn--large"
+      target="_blank"
+      rel="noopener"
+    >Voltar para o WhatsApp e confirmar envio</a>
 
-                  <small class="demo__note" style="margin-top: 10px;">
-                    * Você deve clicar no botão e voltar ao WhatsApp com a mensagem de confirmação de envio para que o teste se inicie com sucesso.
-                  </small>
-                </div>
-              </section>
+    <div class="info-bubble info-bubble--blue" style="margin-top: 12px;">
+      * Você deve clicar no botão e voltar ao WhatsApp com a mensagem de confirmação de envio
+      para que o teste se inicie com sucesso.
+    </div>
+  </div>
+</section>
 
             </form>
           </div>
