--- a/formulario-teste.html
+++ b/formulario-teste.html
@@ -54,11 +54,11 @@
               <div>
                 <h1 class="form-title">
                   Bem vindo ao <span class="gradient-text">teste grátis</span> do Tullu AI Studio
-                </h1>
+                </h1><br>
                 <p class="form-subtitle">
                   Preencha as informações abaixo para criarmos sua conta de teste, configurar o agente no WhatsApp e liberar seu acesso ao painel.
                   Sem cobrança automática, ativação somente com autorização.
-                </p>
+                </p><br>
               </div>
             </div>
 
@@ -221,6 +221,11 @@
                     data-required="true" data-maxlen="800"></textarea>
                   <div class="counter" id="obsCounter">0/800</div>
                 </div>
+<p class="lgpd-note">
+  <span class="lgpd-asterisk">*</span>
+  Ao preencher e avançar, você concorda com a coleta e o tratamento dos dados informados para criar sua conta de teste, configurar seu acesso e viabilizar a ativação do serviço, conforme os
+  <a href="https://tullumotion.com/termos.pdf" target="_blank" rel="noopener">Termos de Uso</a>.
+</p>
 
                 <div class="form-actions">
                   <span></span>
