--- a/formulario-teste.html
+++ b/formulario-teste.html
@@ -224,7 +224,7 @@
 <p class="lgpd-note" >
   <span class="lgpd-asterisk" style="font-size: 12px;">*</span>
   Ao preencher e avançar, você concorda com a coleta e o tratamento dos dados informados para criar sua conta de teste, configurar seu acesso e viabilizar a ativação do serviço, conforme os
-  <a href="https://tullumotion.com/termos.pdf" target="_blank" rel="noopener">Termos de Uso</a>.
+  <a href="https://tullumotion.com/assets/docs/termos.pdf" target="_blank" rel="noopener">Termos de Uso</a>.
 </p>
 
                 <div class="form-actions">
@@ -341,7 +341,7 @@
                   <label class="pill" style="align-items:flex-start; border-radius: 16px; padding: 14px; cursor: pointer;">
                     <input type="checkbox" id="accept_terms" name="accept_terms" data-required="true" style="margin-top: 2px;">
                     <span style="line-height: 1.45;">
-                      Eu li e aceito os <a href="https://tullumotion.com/termos.pdf" target="_blank" rel="noopener" style="text-decoration: underline;">Termos de Uso</a><span class="req">*</span>
+                      Eu li e aceito os <a href="https://tullumotion.com/assets/docs/termos.pdf" target="_blank" rel="noopener" style="text-decoration: underline;">Termos de Uso</a><span class="req">*</span>
                     </span>
                   </label>
                 </div>
