--- a/formulario-teste.html
+++ b/formulario-teste.html
@@ -34,8 +34,15 @@
 
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
-          <li class="nav__item"><a href="#form" class="nav__link">Ativar teste</a></li>
-        </ul>
+  <li class="nav__item">
+    <a href="#form" class="nav__link">Ativar teste</a>
+  </li>
+
+  <li class="nav__item">
+    <a href="https://tullumotion.com/suporte.html" class="nav__link">Suporte</a>
+  </li>
+</ul>
+
       </div>
 
       <div class="nav__toggle" id="nav-toggle">
